--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,301 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.formcontainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 300px;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: "Open Sans", sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+header {
+  max-width: var(--width);
+  width: 100%;
+  padding: 1rem;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+header > img {
+  max-width: 8rem;
+  width: 100%;
+}
+
+header nav {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+header nav a,
+footer a {
+  color: rgba(0, 0, 0, 0.8);
+  text-decoration: none;
+  margin: 0 0.5rem;
+}
+
+header nav a.active {
+  font-weight: bold;
+  color: rgba(0, 0, 0, 1);
+}
+
+footer section article {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
+header nav img {
+  margin-left: 1rem;
+}
+
+main {
+  max-width: var(--width);
+  margin: 0 auto;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+#recipesContainer {
+  width: 1000px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  height: auto;
+}
+
+main article {
+  height: 33rem;
+  width: 100%;
+  margin: 1rem;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.2);
+}
+
+main article figure {
+  margin: 0;
+  padding: 0;
+  background: rgb(244, 182, 10);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+main article figure img {
+  width: 100%;
+  height: 100%;
+}
+
+h2.recipeTitle {
+  margin: 0;
+  padding: 0.5rem 1rem 0rem 1rem;
+}
+h3.cookingTime {
+  margin: 0;
+  padding: 0rem 1rem 1rem 1rem;
+  font-weight: 500;
+  font-size: 14px;
+  opacity: 0.6;
+}
+
+main article p.ingredients {
+  margin: 0;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  line-height: 140%;
+}
+
+main article button {
+  appearance: none;
+  border: none;
+  background: #509e2f;
+  color: white;
+  margin: auto auto 2rem auto;
+  padding: 0.5rem;
+  width: 3rem;
+  border-radius: 0.25rem;
+}
+
+footer {
+  background: rgba(0, 0, 0, 0.03);
+  height: 16rem;
+  display: flex;
+  justify-content: center;
+}
+
+footer > section {
+  max-width: var(--width);
+  width: 100%;
+  display: flex;
+  box-sizing: border-box;
+}
+
+footer > section article {
+  flex: 1;
+  margin: 0 2rem;
+}
+
+footer > section article a {
+  margin: 0.25rem 0;
+}
+
+.recipeCard {
+  width: 100%;
+  max-width: 300px;
+  height: auto; /* Helena - detta gör höjden flexibel */
+  display: flex;
+  flex-direction: column;
+  background: white;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.2);
+  margin: 1rem;
+}
+
+#addBtn {
+  background-color: #509e2f;
+  padding: 10px 30px 10px 30px;
+  color: white;
+  font-size: 14px;
+  border: none;
+}
+
+input {
+  padding: 8px;
+}
+
+#addBtn:hover {
+  opacity: 80%;
+  cursor: pointer;
+}
+
+/*Helena*/
+.recipeCard button:hover {
+  opacity: 0.8;
+}
+
+.recipeCard betygButton {
+  margin-left: 10px;
+  display: flex;
+  justify-content: baseline;
+  flex-direction: row;
+  align-items: center;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.buttonDiv {
+  display: flex;
+}
+#editBtn,
+#deleteBtn {
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  padding: 7px;
+  background-color: #509e2f;
+  color: white;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  width: 60px;
+}
+
+/* .greenBtn {
+  background-color: rgb(239, 239, 239);
+  padding: 8px;
+  font-size: 12px;
+  border: 1px solid gray;
+}
+
+#errorSpan {
+  display: flex;
+  color: red;
+  margin-bottom: 10px;
+  font-size: 14px; */
+/* } */
+
+/* gabriel css */
+#ingredients {
+  width: 210px;
+  height: 300px;
+  resize: none;
+}
+
+/*Helenas css*/
+.betyg {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.starcontainer {
+  display: flex;
+  align-items: center;
+}
+
+#imgBetyg {
+  width: 14px;
+  height: 14px;
+  flex-direction: row-reverse;
+}
+.div1 {
+  display: flex;
+  max-width: 100%;
+  margin-left: 8px;
+}
+.div2 {
+  display: flex;
+  justify-content: end;
+  margin-right: 8px;
+}
+
+.div3 {
+  display: none;
+  justify-content: end;
+  margin-right: 8px;
+}
+
+.imgstars {
+  width: 14px;
+  height: 14px;
+}
+#counter {
+  font-size: 18px;
+  color: #333;
+  margin-top: 5px;
+  margin-left: 10px;
+}
+.betygButton {
+  appearance: none;
+  border: none;
+  background: none;
+  width: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+}
+
+.imgstarempty {
+  height: 20px;
+  width: auto;
+}
+.imgstarblack {
+  height: 20px;
+  width: auto;
 }
